MYS-181 fix: - Removed element-level z-index (was left over from previous stufF). - Updated example to check styling correctness for overlapping dropdown.

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -289,7 +289,8 @@
 .uikit-refactor .cover-status ul li.decision-pending{-webkit-border-radius:0 4px 4px 0;border-radius:0 4px 4px 0;border:3px solid #666}
 }.uikit-refactor .main{display:flex}.uikit-refactor .block{flex-grow:1;flex-basis:50%;padding:0 30px}
 .uikit-refactor .selected-option{margin-bottom:20px}.uikit-refactor .s-typeahead-wrapper{position:relative;width:100%}
-.uikit-refactor .s-typeahead-list--wrapper{position:absolute;width:100%}.uikit-refactor .s-typeahead-list{width:100%;list-style:none;padding:0;margin:0;position:relative;top:-8px;z-index:10;box-sizing:border-box;list-style:none;background:#fff;border:1px solid #333;max-height:213px;overflow-y:scroll;overflow-x:hidden}
+.uikit-refactor .s-typeahead-input{z-index:1}.uikit-refactor .s-typeahead-list--wrapper{position:absolute;width:100%;z-index:5}
+.uikit-refactor .s-typeahead-list{width:100%;list-style:none;padding:0;margin:0;position:relative;top:-8px;box-sizing:border-box;list-style:none;background:#fff;border:1px solid #333;max-height:213px;overflow-y:auto;overflow-x:hidden}
 .uikit-refactor .s-typeahead-list-item{width:100%;background:#ccc;border-bottom:1px solid #333;text-align:left;padding:8px}
 .uikit-refactor .s-typeahead-list-item:last-child{border:0}.uikit-refactor .s-typeahead-list-item--selected,.uikit-refactor .s-typeahead-list-item:hover{background:cornflowerblue;font-weight:700}
 #progressbar{background-color:#e2e2e2;border-radius:10px;padding:3px;margin-top:1.5em}
